create layout of component thisiss-guide huong dan luan van luan an

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,12 +1,19 @@
 <div class="container">
+  <!--Huong dan luan van-->
+  <app-thesis-guide></app-thesis-guide>
+
   <!--QUa trinh di nuoc ngoai-->
   <app-foreign></app-foreign>
+
   <!--nhap thong tin nghach l-uong-->
   <app-salary-brief></app-salary-brief>
+
   <!--danh hieu thi dua -->
   <app-emulation-title></app-emulation-title>
+
   <!--Học hàm , danh hiệu nhà giáo -->
   <app-academic-rank></app-academic-rank>
+
   <!--kỷ luật khen thưởng -->
   <app-bonus-discipline></app-bonus-discipline>
 
