create layout for component seminar-newwspaper

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <!--Bao cao, bai bao khoa hoc -->
+  <app-senimar-newpaper></app-senimar-newpaper>
+  <!-- De tai khoa hoc -->
+  <app-science-topic></app-science-topic>
   <!--Huong dan luan van-->
   <app-thesis-guide></app-thesis-guide>
 
