create layout for component publish infor

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <!--Hoat dong xuat ban -->
+  <app-publish-info></app-publish-info>
   <!--Bao cao, bai bao khoa hoc -->
   <app-senimar-newpaper></app-senimar-newpaper>
   <!-- De tai khoa hoc -->
