create layout for component process-teaching qua trinh giang day

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <!--QUas tring giang day-->
+  <app-process-teaching></app-process-teaching>
   <!--Hoat dong xuat ban -->
   <app-publish-info></app-publish-info>
   <!--Bao cao, bai bao khoa hoc -->
