create layout for component process-evention qua trinh phat minh ,sang che

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <!--Qua trinh phat minh sang che -->
+  <app-process-evention></app-process-evention>
   <!--QUas tring giang day-->
   <app-process-teaching></app-process-teaching>
   <!--Hoat dong xuat ban -->
