--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <!--Sửa thông tin cán bộ -->
+  <app-edit-personnel></app-edit-personnel>
+  <!--Thêm mơi cán bộ -->
+  <app-add-personnel></app-add-personnel>
   <!--Qua trinh phat minh sang che -->
   <app-process-evention></app-process-evention>
   <!--QUas tring giang day-->
