--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <!--thủ tục nghỉ việc -->
+  <app-procedure-leave-job></app-procedure-leave-job>
   <!--Sửa thông tin cán bộ -->
   <app-edit-personnel></app-edit-personnel>
   <!--Thêm mơi cán bộ -->
