create layout for component procedure bind-job 'buoc thoi viec' , leave-job 'nghi viec' , retire 've huu', transfer-work-unit 'chuyen don vi cong tac'

--- a/src/app/personnels/add-personnel/add-personnel.component.html
+++ b/src/app/personnels/add-personnel/add-personnel.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="item-control">
         <label>Chọn phòng ban </label>
-        <select class="form-control" formControlName="deparment">
+        <select class="form-control" formControlName="department">
           <option value="">---Chọn---</option>
         </select>
       </div>
