--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <!--Chuyen don vi cong tac -->
+  <app-procedure-transfer-unit-work></app-procedure-transfer-unit-work>
+  <!--Thu tuc buoc thoi viec-->
+  <app-procedure-bind-job></app-procedure-bind-job>
+  <!--Thu tuc ve huu-->
+  <app-procedure-retire></app-procedure-retire>
   <!--thủ tục nghỉ việc -->
   <app-procedure-leave-job></app-procedure-leave-job>
   <!--Sửa thông tin cán bộ -->
