--- a/src/app/personnels/procedure-leave-job/procedure-leave-job.component.html
+++ b/src/app/personnels/procedure-leave-job/procedure-leave-job.component.html
@@ -1,4 +1,4 @@
-<form action="" [formGroup]="formData">
+<form style="padding-top: 25px"  action="" [formGroup]="formData">
   <div class="row">
     <div class="col-xs-12">
       <div class="form-item" formGroupName="infoSearch">
