create layout for component procedure-transfer-department 'chuyen phong ban'

--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <!--Thuc tuc chuyen phong ban-->
+  <app-procedure-transfer-department></app-procedure-transfer-department>
+
   <!--Chuyen don vi cong tac -->
   <app-procedure-transfer-unit-work></app-procedure-transfer-unit-work>
   <!--Thu tuc buoc thoi viec-->
